Fix Bytebond date

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <!-- Bytebond -->
             <article class="row">
                 <div class="project-wrapper__text">
-                    <h3 class="project-wrapper__text-title">Bytebond</h3>
-                    <p class="project-wrapper__text-info"> 07.2023 - Current </p>
+                    <h3 class="project-wrapper__text-title">Bytebond – DVD Unicorns</h3>
+                    <p class="project-wrapper__text-info"> 07.2022 - Current </p>
                     <p class="project-wrapper__text-info">
                         Bytebond is an asymmetric co-op puzzle game that takes place inside the computer. Bond with your
                         friend and become a part of the Antivirus Special Forces as you head to the heart of the PC.
