--- a/index.html
+++ b/index.html
@@ -149,9 +149,20 @@
                         Solve electrifying puzzles to regain control over the infected CPU. The power conundrum awaits!
                     </p>
                     <p class="project-wrapper__text-info">
-                        Developed in Unity by the DVD Unicorns team where I am mainly a Gameplay Programmer but each of
-                        us performs more than one function.
+                        Our game has been exhibited at events such as <br>
+                        <b>Game Access 2022</b> (won "Best Gameplay" at Indie Showcase),
+                        <b>ZTGK Contest 2022</b> (won in "Game Design" category),
+                        <br><b>PGA 2022</b>, and <b>Digital Dragons 2023</b>.
                     </p>
+                    <p class="project-wrapper__text-info">
+                        The game is developed in <b>Unity</b>. In out team I am the main <b>Gameplay Programmer /
+                        Designer</b>.
+                        Most of the time, I am responsible for creating prototypes and, later, final versions of various
+                        gameplay mechanics. During our design meetings, I try to discuss whether the presented ideas are
+                        feasible, coherent and, most importantly, fun for the player.
+                    </p>
+
+
                 </div>
 
                 <div class="project-wrapper__image">
@@ -187,7 +198,7 @@
             <!-- Delayed -->
             <article class="row">
                 <div class="project-wrapper__text">
-                    <h3 class="project-wrapper__text-title">Delayed</h3>
+                    <h3 class="project-wrapper__text-title">Delayed – Skybox Is The Limit</h3>
 
                     <p class="project-wrapper__text-info">03.2022 – 06.2022</p>
 
@@ -198,19 +209,21 @@
                         broken spaceship.
                     </p>
                     <p class="project-wrapper__text-info">
-                        Winner of 2022 ZTGK Contest in the Game Development Category!<br>
-                        Special awards from:
+                        <b>Winner of 2022 ZTGK Contest in the Game Development Category with special awards
+                            from:</b><br>
                     </p>
-                    <ul>
+                    <ul class="bolded">
                         <li>SuperHot</li>
                         <li>Bloober Team</li>
                         <li>Infinity Ward</li>
                     </ul>
 
                     <p class="project-wrapper__text-info">
-                        Delayed was created with our custom game engine coded in C++ using OpenGL as the render API.
-                        Developed by a team of six (3 programmers, 2 artists, and a designer) in ~4 months. I was a team
-                        leader and one of the programmers.
+                        Delayed was created with <b>our custom game engine</b> coded in C++ using OpenGL as the render
+                        API.
+                        It was developed by a team of six (3 programmers, 2 artists, and a level designer) in ~4 months.
+                        In our team I was a <b>Team Leader</b>, one of <b>Programmers</b> and I was assisting with <b>Game
+                        Design</b>.
                     </p>
 
                 </div>
@@ -253,8 +266,8 @@
                     <p class="project-wrapper__text-info"> 08.2023 </p>
 
                     <p class="project-wrapper__text-info">
-                        Project created with Unreal Engine 5 C++ The Ultimate Game Developer Course. Developed solo in 2
-                        weeks to get the hang of the Unreal Engine and its differences from Unity.
+                        Project created with <b>Unreal Engine 5</b> C++ The Ultimate Game Developer Course from Udemy.
+                        Developed solo in 2 weeks to get the hang of the Unreal Engine 5 and its differences from Unity.
                     </p>
                     <p class="project-wrapper__text-info">What I learned:</p>
                     <ul>
@@ -262,8 +275,8 @@
                         <li>Creating gameplay elements using C++ and blueprints</li>
                         <li>Creating basic SFX and VFX</li>
                         <li>Implementing basic enemy logic using the behavior tree</li>
-                        <li>Using animations and implementing basic IK</li>
-                        <li>In many areas, core concepts do not differ between engines</li>
+                        <li>Using animation blueprints and implementing basic IK</li>
+                        <li>The fact that in many areas, core concepts are not different between engines</li>
                     </ul>
 
                 </div>
@@ -296,7 +309,9 @@
                     </div>
                 </div>
             </article>
+            <!-- /END Slash -->
 
+            <!-- Tilted Dungeon -->
             <article class="row">
                 <div class="project-wrapper__text">
                     <h3 class="project-wrapper__text-title">Tilted Dungeon</h3>
@@ -304,16 +319,18 @@
                     <p class="project-wrapper__text-info"> 07.2023 </p>
 
                     <p class="project-wrapper__text-info">
-                        GMTK Game Jam 2023 Entry
+                        <b>GMTK Game Jam 2023 Entry!</b>
                     </p>
                     <p class="project-wrapper__text-info">
                         Roles reversed, now you control the dungeon! Tilt dungeon floors to push your hero through
                         dangerous environments!
                     </p>
                     <p class="project-wrapper__text-info">
-                        Created in 48 hours by a team of 4 (2 programmers, 2 artists) in Unity. As one of the
-                        programmers among the others, I created input handling, platform tilting mechanics, and
-                        followers' behavior.
+                        This game was created in 48 hours by a team of 4 (2 programmers, 2 artists) in <b>Unity</b>. I
+                        was mainly responsible for <b>fast prototyping, implementing and polishing gameplay
+                        mechanics</b> in the engine. Among the others I created: input handling, camera movement,
+                        platform tilting mechanics, and followers' behavior. Apart from programming I also helped with
+                        game design.
                     </p>
                 </div>
 
@@ -342,14 +359,18 @@
                     </div>
                 </div>
             </article>
-            <!-- /END Project -->
+            <!-- /END Tilted Dungeon -->
 
-            <!-- Each .row is a project -->
+            <!-- Speeeer -->
             <article class="row">
                 <div class="project-wrapper__text">
                     <h3 class="project-wrapper__text-title">Speeeer</h3>
+
                     <p class="project-wrapper__text-info">11.2022</p>
-                    <p class="project-wrapper__text-info">Boat in the Jam 2022 Game Jam Submission.</p>
+
+                    <p class="project-wrapper__text-info">
+                        <b>Boat in the Jam 2022 Game Jam Submission</b>
+                    </p>
                     <p class="project-wrapper__text-info">
                         Power of four! Control four spears, each with its own power. Explore an ancient temple and
                         discover powerful combinations of spears' effects!
@@ -357,7 +378,7 @@
                     <p class="project-wrapper__text-info">
                         A small game created in 48 hours by a team of five (3 programmers and 2 artists). I participated
                         in the design process, created most of the gameplay class structure, and implemented most of the
-                        base systems (e.g. managers, tiles, movement).
+                        base systems (e.g. managers, tiles, player movement).
                     </p>
                 </div>
 
@@ -381,9 +402,9 @@
                     </div>
                 </div>
             </article>
-            <!-- /END Project -->
+            <!-- /END Speeeer -->
 
-            <!-- Each .row is a project -->
+            <!-- Space Invaders -->
             <article class="row">
                 <div class="project-wrapper__text">
                     <h3 class="project-wrapper__text-title">Space Invaders</h3>
@@ -420,9 +441,9 @@
                     </div>
                 </div>
             </article>
-            <!-- /END Project -->
+            <!-- /END Space Invaders -->
 
-            <!-- Each .row is a project -->
+            <!-- Camera Defuser -->
             <article class="row">
                 <div class="project-wrapper__text">
                     <h3 class="project-wrapper__text-title">Camera Defuser</h3>
@@ -466,7 +487,7 @@
                     </div>
                 </div>
             </article>
-            <!-- /END Project -->
+            <!-- /END Camera Defuser -->
 
         </div>
     </div>
