--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                     </p>
                     <p class="project-wrapper__text-info">
                         Our game has been exhibited at events such as <br>
-                        <b>Game Access 2022</b> (won "Best Gameplay" at Indie Showcase),
-                        <b>ZTGK Contest 2022</b> (won in "Game Design" category),
-                        <br><b>PGA 2022</b>, and <b>Digital Dragons 2023</b>.
+                        <b>Game Access 2022</b> (won "Best Gameplay" at Indie Showcase),<br>
+                        <b>ZTGK Contest 2022</b> (won in "Game Design" category),<br>
+                        <b>PGA 2022</b>, and <b>Digital Dragons 2023</b>.
                     </p>
                     <p class="project-wrapper__text-info">
                         The game is developed in <b>Unity</b>. In out team I am the main <b>Gameplay Programmer /
