Added info on professional work
Updated descriptions accordingly

--- a/index.html
+++ b/index.html
@@ -115,12 +115,11 @@
                     <li>Leader of the team that won the 2022 ZTGK Challenge in the Game Development category</li>
                 </ul>
                 <p class="about-wrapper__info-text">
-                    Here you can find some of my personal projects. For professional work, take a look at my
-                    résumé or LinkedIn profile. I am a quick learner who loves to constantly explore new concepts and
-                    ideas (sometimes falling into various rabbit holes). While working with designers, I always try to
-                    look at
-                    ideas from both the technical and user sides to provide the best experience that works the best
-                    given existing systems and limitations.
+                    Here you can find some of my professional and personal projects. For more details on my professional
+                    work, take a look at my résumé or LinkedIn profile. I am a quick learner who loves to constantly
+                    explore new concepts and ideas (sometimes falling into various rabbit holes). While working with
+                    designers, I always try to look at ideas from both the technical and user sides to provide the best
+                    experience that works the best given existing systems and limitations.
                 </p>
                 <span class="about-wrapper__cta">
               <a class="cta-btn cta-btn--resume"
@@ -136,7 +135,97 @@
 <section id="projects">
     <div class="container">
         <div class="project-wrapper">
-            <h2 class="section-title dark-blue-text">Projects</h2>
+            <h2 class="section-title dark-blue-text">Professional Work</h2>
+
+            <!-- Cooking -->
+            <article class="row">
+                <div class="project-wrapper__text">
+                    <h3 class="project-wrapper__text-title">Cooking Simulator – Big Cheese Studio</h3>
+                    <p class="project-wrapper__text-info"> 09.2022 - 12.2022</p>
+                    <p class="project-wrapper__text-info">
+                        Play one of the best cooking games! Take control of a highly polished, realistic kitchen
+                        equipped with all kinds of utensils and stands. Unlock and master over 80 recipes or use dozens
+                        of lifelike ingredients to cook everything you like. A simulator spiced up with a dash of
+                        real-life physics!
+                    </p>
+                    <p class="project-wrapper__text-info">
+                        In this project, I helped with bug fixing and maintenance of the game code. Worked on base game
+                        as well as the DLCs.
+                    </p>
+                </div>
+
+                <div class="project-wrapper__image">
+                    <a href="https://store.steampowered.com/app/641320/Cooking_Simulator/" rel="noopener noreferrer"
+                       target="_blank">
+                        <div class="thumbnail rounded">
+                            <img
+                                    alt="Project Image"
+                                    class="img-fluid"
+                                    height="767"
+                                    src="./assets/screens/cooking.jpg"
+                                    width="1366"
+                            />
+                        </div>
+                    </a>
+                    <div class="project-wrapper__text-btns">
+                        <a
+                                class="cta-btn cta-btn--hero cta-btn--projects"
+                                href="https://store.steampowered.com/app/641320/Cooking_Simulator/"
+                                rel="noopener noreferrer"
+                                target="_blank"
+                        >Steam Page</a>
+                    </div>
+                </div>
+            </article>
+            <!-- /END Cooking -->
+
+            <!-- Underdose -->
+            <article class="row">
+                <div class="project-wrapper__text">
+                    <h3 class="project-wrapper__text-title">Underdose – Big Cheese Studio</h3>
+                    <p class="project-wrapper__text-info"> 01.2023 - 07.2023</p>
+                    <p class="project-wrapper__text-info">
+                        In a not-too-distant, retro-future world shaken by a shortage of medicine, a talented pharmacist
+                        is accused of murdering Patient Zero. He flees to the slums, where he tries to survive in
+                        isolation until he can recreate the formula for the drug that will save his life.
+                    </p>
+                    <p class="project-wrapper__text-info">
+                        In Underdose, I was mainly a <b>Game Programmer</b>. I was responsible for prototyping and
+                        implementing
+                        gameplay mechanics, creating gameplay-related systems and developing needed tools. Apart from
+                        programming, I also had the opportunity to take part in the design process by participating in
+                        brainstorming sessions and reporting my own ideas. Additionally, because of the close
+                        cooperation between different departments in our team, I could observe and learn how project
+                        management and production were done.
+                    </p>
+                </div>
+
+                <div class="project-wrapper__image">
+                    <a href="https://store.steampowered.com/app/2449690/Underdose/" rel="noopener noreferrer"
+                       target="_blank">
+                        <div class="thumbnail rounded">
+                            <img
+                                    alt="Project Image"
+                                    class="img-fluid"
+                                    height="767"
+                                    src="./assets/screens/underdose.jpg"
+                                    width="1366"
+                            />
+                        </div>
+                    </a>
+                    <div class="project-wrapper__text-btns">
+                        <a
+                                class="cta-btn cta-btn--hero cta-btn--projects"
+                                href="https://store.steampowered.com/app/2449690/Underdose/"
+                                rel="noopener noreferrer"
+                                target="_blank"
+                        >Steam Page</a>
+                    </div>
+                </div>
+            </article>
+            <!-- /END Underdose -->
+
+            <h2 class="section-title dark-blue-text">Personal Projects</h2>
 
             <!-- Bytebond -->
             <article class="row">
