Updated profile picture, added new project

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1 class="hero-title">
             Hi, my name is <span class="name">Jakub Berut</span>
             <br/>
-            I'm the Game Developer.
+            I am the Game Developer.
         </h1>
         <p class="hero-cta">
             <a class="cta-btn cta-btn--resume" href="#about">About me</a>
@@ -244,8 +244,7 @@
                         <b>PGA 2022</b>, and <b>Digital Dragons 2023</b>.
                     </p>
                     <p class="project-wrapper__text-info">
-                        The game is developed in <b>Unity</b>. In out team I am the main <b>Gameplay Programmer /
-                        Designer</b>.
+                        The game is developed in <b>Unity</b>. In out team I am the main <b>Gameplay Programmer</b>.
                         Most of the time, I am responsible for creating prototypes and, later, final versions of various
                         gameplay mechanics. During our design meetings, I try to discuss whether the presented ideas are
                         feasible, coherent and, most importantly, fun for the player.
@@ -346,6 +345,61 @@
                 </div>
             </article>
             <!-- /END Delayed -->
+
+            <!-- Make Me Mime -->
+            <article class="row">
+                <div class="project-wrapper__text">
+                    <h3 class="project-wrapper__text-title">Make Me Mime</h3>
+
+                    <p class="project-wrapper__text-info"> 02.2024 </p>
+
+                    <p class="project-wrapper__text-info">
+                        <b>Global Game Jam 2024 Entry!</b>
+                    </p>
+                    <p class="project-wrapper__text-info">
+                        Make Me Mime is a power fantasy first-person shooter game where you play as a mime.
+                        Unleash your creativity thorough an imaginary handgun and make people laugh. By shooting with
+                        your imagination, bring joy to the world around you.
+                        Get more and more joyful after time, and soon you might understand the real truth about you.
+                    </p>
+                    <p class="project-wrapper__text-info">
+                        <b>Awarded 2nd place at Łódzki Game Jam 8 jam site!</b>
+                    </p>
+                    <p class="project-wrapper__text-info">
+                        This game was created in ~48 hours by a team of 5 (2 programmers, 2 artists, and a designer)
+                        in <b>Unity</b>. In this project <b>I was responsible for developing the gameplay</b> of this
+                        game. I created movement and shooting. I added enemies and a score system. I also made the whole
+                        game sequence and environment details. The second developer, among others, created vfx, sfx
+                        system and blood system.
+                    </p>
+                </div>
+
+                <div class="project-wrapper__image">
+                    <a href="https://dvd-unicorns.itch.io/make-me-mime" rel="noopener noreferrer" target="_blank">
+                        <div class="thumbnail rounded">
+                            <img
+                                    alt="Project Image"
+                                    class="img-fluid"
+                                    height="767"
+                                    src="./assets/screens/make_me_mime.png"
+                                    width="1366"
+                            />
+                        </div>
+                    </a>
+                    <div class="project-wrapper__text-btns">
+                        <a
+                                class="cta-btn cta-btn--hero cta-btn--projects"
+                                href="https://dvd-unicorns.itch.io/make-me-mime"
+                                rel="noopener noreferrer"
+                                target="_blank"
+                        >Itch.io Page</a>
+                        <a class="cta-btn text-color-main" href="https://globalgamejam.org/games/2024/make-me-mime-3"
+                           target="_blank"
+                        >GGJ Page</a>
+                    </div>
+                </div>
+            </article>
+            <!-- /END Make Me Mime -->
 
             <!-- Tilted Dungeon -->
             <article class="row">
