--- a/index.html
+++ b/index.html
@@ -225,6 +225,49 @@
             </article>
             <!-- /END Underdose -->
 
+            <!-- Rancher -->
+            <article class="row">
+                <div class="project-wrapper__text">
+                    <h3 class="project-wrapper__text-title">Rancher: A new life – Sim Farm</h3>
+                    <p class="project-wrapper__text-info"> 12.2023 - current</p>
+                    <p class="project-wrapper__text-info">
+                        Start a new life as a Rancher. Travel the forest paths by quad bike, raise cattle, build,
+                        repair, and improve your farm. Take care of animals, go fishing, cook, grow vegetables, practice
+                        your accuracy on shooting range, take photos, and much more. Relax away from the hustle and
+                        bustle of the city!
+                    </p>
+                    <p class="project-wrapper__text-info">
+                        In this project I am a <b>Lead Programmer and Associate Producer</b>. My daily tasks
+                        range from implementation of new mechanics and code review, through writing documentation and
+                        design review, to project planning and progress reporting.
+                    </p>
+                </div>
+
+                <div class="project-wrapper__image">
+                    <a href="https://store.steampowered.com/app/2665250/Rancher_A_new_life/" rel="noopener noreferrer"
+                       target="_blank">
+                        <div class="thumbnail rounded">
+                            <img
+                                    alt="Project Image"
+                                    class="img-fluid"
+                                    height="767"
+                                    src="./assets/screens/rancher.jpg"
+                                    width="1366"
+                            />
+                        </div>
+                    </a>
+                    <div class="project-wrapper__text-btns">
+                        <a
+                                class="cta-btn cta-btn--hero cta-btn--projects"
+                                href="https://store.steampowered.com/app/2665250/Rancher_A_new_life/"
+                                rel="noopener noreferrer"
+                                target="_blank"
+                        >Steam Page</a>
+                    </div>
+                </div>
+            </article>
+            <!-- /END Rancher -->
+
             <h2 class="section-title dark-blue-text">Personal Projects</h2>
 
             <!-- Bytebond -->
